--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <header ngClass="sectionHeader">
         <div ngClass="flex-row">
             <div>
-                <h1>You favourite bookmarks app</h1>
+                <h1>Bookmarks app</h1>
                 <app-bookmark-form></app-bookmark-form>
             </div>
         </div>
